WorkflowUI code optimized